--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@
   font-weight: 800;
   font-size: 18px;
   line-height: 1.33;
-  play: flex;
+  display: flex;
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
