--- a/css/styles.css
+++ b/css/styles.css
@@ -151,3 +151,7 @@
   color: #e7e9fc;
 }
 /*==============/FOOTER============*/
+
+/* +++++++++++++++++++++++++++PORTFOLIO++++++++++++++++++++++++ */
+.model-button-filter {
+}
