--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 .link {
   text-decoration: none;
 }
-.global-style {
+body {
   font-family: "Roboto", "Raleway", sans-serif;
   color: #2e2f42;
 }
@@ -58,6 +58,16 @@
 
 /* ===========HERO=========== */
 .model-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
   background: #4d5ae5;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -143,12 +153,20 @@
 
 /* +++++++++++++++++++++++++++PORTFOLIO++++++++++++++++++++++++ */
 .model-button-filter {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
   background: #f4f4fd;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
-  flex: none;
-  order: 1;
-  flex-grow: 0;
 }
 .text-button-filters {
   display: flex;
@@ -159,4 +177,26 @@
   flex: none;
   order: 0;
   flex-grow: 0;
+}
+
+.model-button-filter:hover,
+.model-button-filter:focus {
+  color: #ffffff;
+  background: #4d5ae5;
+  cursor: pointer;
+}
+.model-button:hover,
+.model-button:focus {
+  background: #404bbf;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.menu-link:hover,
+.menu-link:focus {
+  color: #404bbf;
+}
+.main-contact:hover,
+.main-contact:focus {
+  color: #404bbf;
 }
