--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,7 @@ body {
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: #ffffff;
+  text-align: center;
 }
 /* ===========/HERO=========== */
 
@@ -171,6 +172,7 @@ body {
   background: #f4f4fd;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
+  font-family: "Roboto", sans-serif;
 }
 .text-button-filters {
   display: flex;
