--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,8 @@ body {
 
 /* ===========HERO=========== */
 .model-button {
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
