--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ body {
 /* ===========/HERO=========== */
 
 /* ===========FEATURE==========*/
-.title-h3 {
+.title-feature {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
