--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,9 @@ body {
   letter-spacing: 0.02em;
   color: #e7e9fc;
 }
+.footer {
+  background: #2e2f42;
+}
 /*==============/FOOTER============*/
 
 /* +++++++++++++++++++++++++++PORTFOLIO++++++++++++++++++++++++ */
