--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,9 @@ body {
 .footer {
   background: #2e2f42;
 }
+.text-logo-footer {
+  color: #f4f4fd;
+}
 /*==============/FOOTER============*/
 
 /* +++++++++++++++++++++++++++PORTFOLIO++++++++++++++++++++++++ */
