--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   --second-font: "Raleway", sans-serif;
   --accent-color: #434455;
   --second-color: #4d5ae5;
+  --content-color: color: #2E2F42;
 }
 .list {
   list-style: none;
@@ -200,7 +201,7 @@ body {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: var(--accent-color);
+  color: var(--content-color);
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -225,7 +226,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--second-color);
+  color: var(--accent-color);
   flex: none;
   order: 1;
   flex-grow: 0;
