--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   --second-font: "Raleway", sans-serif;
   --accent-color: #434455;
   --second-color: #4d5ae5;
-  --content-color: color: #2E2F42;
+  --content-color: #2e2f42;
 }
 .list {
   list-style: none;
