--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,7 @@ body {
   align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
-  color: #4d5ae5;
+  color: var(--second-color);
   flex: none;
   order: 0;
   flex-grow: 0;
