--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,7 @@ body {
   align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
-  color: var(--second-color);
+  color: var(--primary-brand-color);
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -203,7 +203,7 @@ body {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color: var(--content-color);
+  color: var(--dark-color);
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -228,7 +228,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--accent-color);
+  color: var(--text-color);
   flex: none;
   order: 1;
   flex-grow: 0;
