--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,7 @@ body {
 
 /* ===========HERO=========== */
 .model-button {
+  font-family: Roboto, sans-serif;
   cursor: pointer;
   font-weight: 500;
   font-size: 16px;
