--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ body {
 /*==============/FOOTER============*/
 
 /* +++++++++++++++++++++++++++PORTFOLIO++++++++++++++++++++++++ */
-.model-button-filter {
+.button-filter {
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
