--- a/css/styles.css
+++ b/css/styles.css
@@ -179,8 +179,8 @@ address {
   letter-spacing: 0.02em;
   color: var(--dark-color);
 }
-.model-button-filter:hover,
-.model-button-filter:focus {
+.button-filter:hover,
+.button-filter:focus {
   color: var(--white-color);
   background: var(--primary-brand-color);
 }
