--- a/css/styles.css
+++ b/css/styles.css
@@ -73,17 +73,16 @@ body {
 
 /* ===========HERO=========== */
 .model-button {
-  font-family: Roboto, sans-serif;
-  cursor: pointer;
+  font-style: var(--prime-font);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  display: flex;
   letter-spacing: 0.04em;
   color: var(--white-color);
   background: var(--primary-brand-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .text-button {
