--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ body {
 
 /* ===========HERO=========== */
 .model-button {
-  font-style: var(--prime-font);
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
