--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,21 @@
 .link {
   text-decoration: none;
 }
+h1,
+h2,
+h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+img {
+  display: block;
+}
 body {
   font-family: "Roboto", sans-serif;
   color: var(--text-color);
@@ -44,7 +59,6 @@ body {
 .contact {
   font-style: normal;
 }
-
 .menu-link {
   color: var(--dark-color);
   font-weight: 500;
@@ -97,6 +111,7 @@ body {
 /* ===========/HERO=========== */
 
 /* ===========FEATURE==========*/
+
 .title-feature {
   font-weight: 500;
   font-size: 20px;
